@@ -1,0 +1,12 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<module type="PYTHON_MODULE" version="4">
+  <component name="NewModuleRootManager">
+    <content url="file://$MODULE_DIR$/../Danish-XBMC-addons/script.module.danishaddons/xbmcstubs">
+      <sourceFolder url="file://$MODULE_DIR$/../Danish-XBMC-addons/script.module.danishaddons/xbmcstubs" isTestSource="false" />
+    </content>
+    <content url="file://$MODULE_DIR$" />
+    <orderEntry type="inheritedJdk" />
+    <orderEntry type="sourceFolder" forTests="false" />
+  </component>
+</module>
+
