@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <addon id="plugin.video.dr.dk.bonanza"
-       version="1.0.6"
+       version="1.1.0"
        name="DR.dk Bonanza"
        provider-name="twinther [tommy@winther.nu]">
     <requires>
         <import addon="xbmc.python" version="1.0"/>
-        <import addon="script.module.danishaddons" version="1.1.0"/>
         <import addon="script.module.simplejson" version="2.0.10"/>
     </requires>
     <extension point="xbmc.python.pluginsource" library="addon.py">
