@@ -1,3 +1,6 @@
+[B]Version 1.1.0 - 2001-07-xx[/B]
+- Removed dependency on script.module.danishaddons
+
 [B]Version 1.0.6[/B]
 - Prepare for official XBMC repository
 
